--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@
 
 body {
 	background-color: #999999;
-	background-image: url('../images/grocery-bg.jpg');
+	background-image: url('https://cdn.glitch.com/72548e86-2a07-45d1-9756-a034ea6672b3%2Fgrocery-bg.jpg?1495684429681');
 	background-size: 1280px 900px;
 	background-repeat: repeat-y;
 	font-family: Arial, 'sans-serif';
@@ -136,11 +136,11 @@ body {
 }
 
 .incomplete {
-	background-image: url('../images/incomplete.png');
+	background-image: url('https://cdn.glitch.com/72548e86-2a07-45d1-9756-a034ea6672b3%2Fincomplete.png?1495684448133');
 }
 
 .complete {
-	background-image: url('../images/complete.png');
+	background-image: url('https://cdn.glitch.com/72548e86-2a07-45d1-9756-a034ea6672b3%2Fcomplete.png?1495684439106');
 }
 
 .item-text {
