--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
 		<div class="list-content">
 			
 			<div class="item-input-div">
-				<input type="text" class="item-input" autofocus>
+				<input type="text" class="item-input">
 			</div>
 
 			<ul class="shopping-list">
