--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<div class="heading">
-			<h1>My <span>Shopping</span> List</h1>
+			<h1>My Shopping List</h1>
 			<p>Don't Come Home Without It!</p>
 		</div>
 		<div class="list-content">
