--- a/public/style.css
+++ b/public/style.css
@@ -151,6 +151,10 @@ body {
 }
 
 .item-remove {
-	float: right;
+  float: right;
 	cursor: pointer;
+  width:20px;
+  height:20px;
+  background-size:cover;
+  background-image: url('https://cdn.glitch.com/72548e86-2a07-45d1-9756-a034ea6672b3%2Fremove.png?1495684443965');
 }
