--- a/public/style.css
+++ b/public/style.css
@@ -22,29 +22,29 @@ body {
   background-position: 50%;
 }
 
-.heading {
+header {
 	background-color: rgba(255,255,255,0.8);
 	text-align: center;
 	padding: 3em;
 	box-shadow: 0 0 0 #e5e5e5,0 0 2px rgba(0,0,0,.12),0 2px 4px rgba(0,0,0,.24);
 }
 
-.heading h1 {
+header h1 {
 	font-family: 'Kameron', serif;
 	font-size: 3em;
 }
 
 @media (max-width: 510px) {
-	.heading h1 {
+	header h1 {
 		font-size: 2em;
 	}
 }
 
-.heading span {
+header span {
 	color: #339933;
 }
 
-.heading p {
+header p {
 	font-family: 'Nunito', sans-serif;
 	font-weight: 300;
 	margin-top: -6px;
@@ -123,12 +123,6 @@ body {
 	text-align: center;
 	display: inline-block;
 	float: right;
-}
-
-.list-content > a {
-	color: inherit;
-	text-decoration: inherit;
-	margin: 0 auto;
 }
 
 .item-check {
