--- a/views/index.html
+++ b/views/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>My Shopping List</title>
-	<link rel="stylesheet" href="/style.css" type="text/css">
-	<script src="https://code.jquery.com/jquery.min.js"></script>
-	<script src="/client.js"></script>
-</head>
-<body>
-	<div class="container">
-		<div class="heading">
-			<h1>My Shopping List</h1>
-			<p>Don't Come Home Without It!</p>
-		</div>
-		<div class="list-content">
-			
-			<input type="text" class="item-input">
-
-			<ul class="shopping-list">
-				<!-- <li>Sample Item</li> -->
-			</ul>
-
-			<button class="add-item">Add Item</button>
-		
-		</div>
-	</div>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>My Shopping List</title>
+    <script src="https://code.jquery.com/jquery.min.js"></script>
+    <link rel="stylesheet" href="/style.css" type="text/css">
+    <script src="/client.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <heading>
+        <h1>My Shopping List</h1>
+      </heading>
+      
+      <!--   Key Section of App    -->
+      <div class="list-content">
+        <input type="text" class="item-input">
+        <ul class="shopping-list">
+          <!-- <li>Sample Item</li> -->
+        </ul>
+        <button class="add-item">Add Item</button>
+      </div>
+      <!--   Key Section of App    -->
+      
+    </div>
+  </body>
 </html>
