--- a/views/index.html
+++ b/views/index.html
@@ -14,13 +14,19 @@
       </heading>
       
       <!--   Key Section of App    -->
-      <div class="list-content">
-        <input type="text" class="item-input">
+      <form class="list-content">
+        
+        <label>
+          <input type="text" class="item-input">
+        </label>
+        
         <ul class="shopping-list">
           <!-- <li>Sample Item</li> -->
         </ul>
+        
         <button class="add-item">Add Item</button>
-      </div>
+      
+      </form>
       <!--   Key Section of App    -->
       
     </div>
