--- a/views/index.html
+++ b/views/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div class="container">
-      <heading>
+      <header>
         <h1>My Shopping List</h1>
-      </heading>
+      </header>
       
       <!--   Key Section of App    -->
       <form class="list-content">
