--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>My Shopping List</title>
     <script src="https://code.jquery.com/jquery.min.js"></script>
-    <link rel="stylesheet" href="/style.css" type="text/css">
+    <link rel="stylesheet" href="../style.css" type="text/css">
     <script src="/client.js"></script>
   </head>
   
